// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddDialog /> should match baseline snapshot 1`] = `
<React.Fragment>
  <form
    id="add-reference"
    onSubmit={[Function]}
  >
    <IdentifierInput
      fieldRef={[Function]}
    />
  </form>
  <ButtonRow
    onSearchPubmedClick={[Function]}
  />
</React.Fragment>
`;

exports[`<AddDialog /> should render pubmed dialog 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,16 +1,6 @@
  <React.Fragment>
-   <Container
-     onClose={[Function res]}
-     overlayOpacity={0.2}
-     title=\\"Search PubMed\\"
-     width={600}
-   >
-     <PubmedDialog
-       onSubmit={[Function res]}
-     />
-   </Container>
    <form
      id=\\"add-reference\\"
      onSubmit={[Function anonymous]}
    >
      <IdentifierInput"
`;

exports[`<AddDialog /> should render pubmed dialog 2`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`<AddDialog /> should toggle loading 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,12 +1,6 @@
  <React.Fragment>
-   <Spinner
-     bgColor=\\"transparent\\"
-     height=\\"calc(100% - 40px)\\"
-     overlay={true}
-     size=\\"40px\\"
-   />
    <form
      id=\\"add-reference\\"
      onSubmit={[Function anonymous]}
    >
      <IdentifierInput"
`;
